--- a/src/main/resources/templates/infopage/home.html
+++ b/src/main/resources/templates/infopage/home.html
@@ -89,7 +89,9 @@
                             </div>
                         </div>
                     </div>
-
+                </div>
+            </div>
+        </div>
     </main>
     <footer class="footer">
         <div class="container">
