--- a/src/main/resources/templates/ticket/searchchamado.html
+++ b/src/main/resources/templates/ticket/searchchamado.html
@@ -12,6 +12,7 @@
         crossorigin="anonymous" />
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.index.css" media="screen,projection" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.css">
 
     <style>
         @keyframes fadeIn {
@@ -197,7 +198,7 @@
                     <h1 class="listada" th:if="${isAdmin}">Todos Chamados</h1>
                     <h1 class="listada" th:if="${!isAdmin}">Meus Chamados</h1>
                     <div class="table-responsive">
-                        <table class="table table-striped">
+                        <table class="table table-striped" id="dataTable" width="100%" cellspacing="0">
                             <thead>
                                 <tr>
                                     <th th:if="${!isAdmin}"></th>
@@ -259,6 +260,7 @@
         </div>
     </div>
     </div>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
@@ -293,7 +295,7 @@
             tr = table.getElementsByTagName("tr");
 
             for (i = 0; i < tr.length; i++) {
-                td = tr[i].getElementsByTagName("td")[0]; // Coluna do Código
+                td = tr[i].getElementsByTagName("td")[1]; // Coluna do Código
 
                 if (td) {
                     txtValue = td.textContent || td.innerText;
