--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -14,7 +14,8 @@
 </head>
 <style>
     .main-colaborador {
-        background-color: #f8f9fa; /* Cor de fundo mais suave */
+        background-color: #f8f9fa;
+        /* Cor de fundo mais suave */
         padding: 50px 0;
     }
 
@@ -35,11 +36,13 @@
     }
 
     .card-colaborador h2 {
-        color: #007bff; /* Cor azul padrão do Bootstrap */
+        color: #007bff;
+        /* Cor azul padrão do Bootstrap */
     }
 
     .card-colaborador i {
-        color: #007bff; /* Cor azul para ícones */
+        color: #007bff;
+        /* Cor azul para ícones */
     }
 
     .card-body-colaborador {
@@ -122,8 +125,8 @@
                                         style="margin-right: 10px;"></i>Consultar chamado</a>
                             </nav>
                         </div>
-                        <a th:if="${isAdmin}" class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                            aria-expanded="false" aria-controls="collapsePages">
+                        <a th:if="${isAdmin}" class="nav-link collapsed" href="#" data-bs-toggle="collapse"
+                            data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
                             <div th:if="${isAdmin}" class="sb-nav-link-icon"><i class="fa-solid fa-clipboard-user"
                                     style="margin-right: 10px;"></i></div>
                             Gerenciamento
@@ -199,7 +202,7 @@
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-primary text-white mb-4">
                                 <div class="card-body" style="font-size: 35px; text-align: center;">
-                                    <span th:text="${ticketAberto}"></span>
+                                    <span id="ticket_aberto" th:text="${ticketAberto}"></span>
                                 </div>
                                 <p class="card-text" style="text-align: center; margin-left: 10px; font-size: 15px;">
                                     <strong>TICKET ABERTO</strong>
@@ -213,7 +216,7 @@
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-warning text-white mb-4">
                                 <div class="card-body" style="font-size: 35px; text-align: center;">
-                                    <span th:text="${ticketEmAndamento}"></span>
+                                    <span id="ticket_andamento" th:text="${ticketEmAndamento}"></span>
                                 </div>
                                 <p class="card-text" style="text-align: center; margin-left: 10px; font-size: 15px;">
                                     <strong>TICKET EM ANDAMENTO</strong>
@@ -227,7 +230,7 @@
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-success text-white mb-4">
                                 <div class="card-body" style="font-size: 35px; text-align: center;">
-                                    <span th:text="${ticketConcluido}"></span>
+                                    <span id="ticket_concluido" th:text="${ticketConcluido}"></span>
                                 </div>
                                 <p class="card-text" style="text-align: center; margin-left: 10px; font-size: 15px;">
                                     <strong>TICKET CONCLUÍDOS</strong>
@@ -241,7 +244,7 @@
                         <div class="col-xl-3 col-md-6">
                             <div class="card bg-danger text-white mb-4">
                                 <div class="card-body" style="font-size: 35px; text-align: center;">
-                                    <span th:text="${ticketAguardandoInfoAdd}"></span>
+                                    <span id="ticket_aguardando_info" th:text="${ticketAguardandoInfoAdd}"></span>
                                 </div>
                                 <p class="card-text" style="text-align: center; margin-left: 10px; font-size: 15px;">
                                     <strong>TICKET AGUARDANDO INFO ADD</strong>
@@ -253,26 +256,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-xl-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-area me-1"></i>
-                                    Area do gráfico
-                                </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                    <div class="col-xl-6">
+                        <div class="card mb-4">
+                            <div class="card-header">
+                            <i class="fas fa-chart-pie me-1"></i>
+                                Análise de Chamados
                             </div>
-                        </div>
-                        <div class="col-xl-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-bar me-1"></i>
-                                    Gráfico em barra
-                                </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                            <div class="card-body">
+                                <!-- Adicione o ID correto e verifique se os dados estão sendo passados corretamente -->
+                                <canvas id="myPieChart" width="100%" height="40"></canvas>
                             </div>
                         </div>
                     </div>
+
                     <div class="card mb-4">
                         <div class="card-header">
                             <i class="fa-solid fa-database" style="margin-right: 10px;"></i>
@@ -330,6 +326,43 @@
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="materialize/js/materialize.table.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Acessando os dados Thymeleaf
+            var ticketConcluido = parseInt(document.getElementById("ticket_concluido").textContent);
+            var ticketEmAndamento = parseInt(document.getElementById("ticket_andamento").textContent);
+            var ticketAberto = parseInt(document.getElementById("ticket_aberto").textContent);
+            var ticketAguardandoInfoAdd = parseInt(document.getElementById("ticket_aguardando_info").textContent);
+
+            // Configuração do gráfico de pizza
+            var ctx = document.getElementById('myPieChart').getContext('2d');
+            var myPieChart = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: ['Concluído', 'Em Andamento', 'Aberto', 'Aguardando Info Adicional'],
+                    datasets: [{
+                        data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
+                        backgroundColor: ['#28a745', '#ffc107', '#007bff', '#dc3545'],
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    plugins: {
+                        legend: {
+                            position: 'top',
+                        },
+                        tooltip: {
+                            callbacks: {
+                                label: function (tooltipItem) {
+                                    return tooltipItem.label + ': ' + tooltipItem.raw + ' chamados';
+                                }
+                            }
+                        }
+                    }
+                }
+            });
+        });
+    </script>
     <script>
         function calcularIdade(dataNascimento) {
             var hoje = new Date();
