--- a/src/main/resources/templates/ticket/cadastrarChamado.html
+++ b/src/main/resources/templates/ticket/cadastrarChamado.html
@@ -89,10 +89,34 @@
         #additionalFields .form-group {
             margin-top: 20px;
         }
+                /* Estilo para a div de carregamento */
+                .loading-overlay {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.7);
+            z-index: 9999;
+            text-align: center;
+            padding-top: 20%;
+        }
+
+        .loading-icon {
+            font-size: 50px;
+            color: #007bff;
+        }
     </style>
 </head>
 
 <body class="sb-nav-fixed">
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-icon">
+            <i class="fas fa-spinner fa-spin"></i> <!-- Ícone de carregamento (pode ser alterado conforme necessário) -->
+        </div>
+        <p>Aguarde, salvando chamado...</p>
+    </div>
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
         <!-- Navbar Brand-->
         <a class="navbar-brand ps-3" href="principal">DEMO</a>
