--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -52,8 +52,8 @@
             <div class="text-center mb-4">
                 <h1 class="h3 mb-3 font-weight-normal">Sistema Help Desk</h1>
                 <p class="font-weight-lighter">Seja bem-vindo.</p>
-                <p class="text-muted">Realize seu login para continuar</p>                    
-                <div th:if="${alerta != null}" th:class="${alerta == 'erro'} ? 'alert alert-danger' : 'alert alert-success'" role="alert">
+                <p class="text-muted">Realize seu login para continuar</p>
+                <div th:if="${alerta != null}" th:classappend="${alerta == 'erro'} ? ' alert-danger' : ' alert-success'" class="alert" role="alert">
                     <h4 th:text="${titulo}" class="alert-heading">Credenciais...</h4>
                     <p th:text="${texto}">Login ou senha incorretos...</p>
                     <hr>
@@ -74,14 +74,13 @@
             </div>
 
             <div class="form-check mb-3">
-                <input type="checkbox" class="form-check-input" id="rememberMe" value="remember-me">
+                <input type="checkbox" class="form-check-input" id="rememberMe" name="remember-me">
                 <label class="form-check-label" for="rememberMe">Remember me</label>
             </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
             <hr>
             <nav class="nav nav-pills flex-column flex-sm-row">
-                <a class="flex-sm-fill text-sm-left nav-link" th:href="@{/u/p/redefinir/senha}"><i class="fas fa-key"></i>&nbsp;Recuperar senha</a>
-
+                <a class="flex-sm-fill text-sm-left nav-link" th:href="@{/login-redefinir-senha}"><i class="fas fa-key"></i>&nbsp;Recuperar senha</a>
             </nav>
             <p class="mt-5 mb-3 text-muted text-center">Sistema Help Desk&copy; 2024</p>
         </form>
