--- a/src/main/resources/templates/pedido-recuperar-senha.html
+++ b/src/main/resources/templates/pedido-recuperar-senha.html
@@ -8,49 +8,70 @@
     <!-- Import Google Icon Font -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="materialize/css/materialize.min.css" media="screen,projection" />
-<style>
-.bd-placeholder-img {
-	font-size: 1.125rem;
-	text-anchor: middle;
-	-webkit-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-}
+    <style>
+        body {
+            background-color: #f0f8ff;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            margin: 0;
+        }
 
-@media (min-width: 768px) {
-	.bd-placeholder-img-lg {
-		font-size: 3.5rem;
-	}
-}
-</style>
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+        }
 
-<!-- Custom styles for this template -->
+        .form-signin {
+            max-width: 400px;
+            padding: 15px;
+            border: 1px solid #dee2e6;
+            border-radius: 5px;
+            background-color: #ffffff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-top: 20px; /* Espaçamento superior */
+        }
+
+        .form-signin img {
+            margin-right: 15px;
+        }
+
+        .form-signin label {
+            font-weight: bold;
+        }
+
+        .form-signin .alert {
+            margin-bottom: 15px;
+        }
+    </style>
 </head>
 <body>
-	<form th:action="@{/login-recuperar-senha}" class="form-signin was-validated" method="GET">		
-		<div class="text-center mb-4">
-			<h1 class="h3 mb-3 font-weight-normal">Demo Helpdesk</h1>
-			<p class="font-weight-lighter">Seja bem-vindo.</p>
-			<p class="text-muted">Informe o login para recuperação de senha!</p>
-		</div>
-		
-		<div class="form-label-group">
-			<input type="email" id="inputEmail" class="form-control" placeholder="e-mail" 
-				name="email" required autofocus />
-			<label for="inputEmail">Email</label>
-			<div class="invalid-feedback">
-				Use seu email como login.
-			</div>
-		</div>
-	
-		<button class="btn btn-lg btn-info btn-block" type="submit">Confirmar Solicitação</button>
-		<hr>
-		<nav class="nav nav-pills flex-column flex-sm-row">
-			<a class="flex-sm-fill text-sm-left nav-link text-decoration-none" th:href="@{/}">
-				<i class="fas fa-home"></i>&nbsp;Home</a>
-		</nav>
-		<p class="mt-5 mb-3 text-muted text-center">Help desk Spring Security&copy; 2024</p>
-	</form>	
+    <div class="container">
+        <form th:action="@{/login-recuperar-senha}" class="form-signin was-validated" method="GET">        
+            <div class="text-center mb-4">
+                <h1 class="h3 mb-3 font-weight-normal">Sistema Help Desk</h1>
+                <p class="font-weight-lighter">Seja bem-vindo.</p>
+                <p class="text-muted">Informe o login para recuperação de senha!</p>
+            </div>
+            
+            <div class="form-group">
+                <label for="inputEmail">Email</label>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="email" required autofocus>
+                <div class="invalid-feedback">Use seu email cadastrado como login.</div>
+            </div>
+
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Confirmar Solicitação</button>
+            <hr>
+            <nav class="nav nav-pills flex-column flex-sm-row">
+                <a class="flex-sm-fill text-sm-left nav-link" th:href="@{/}"><i class="fas fa-home"></i>&nbsp;Home</a>
+            </nav>
+            <p class="mt-5 mb-3 text-muted text-center">Sistema Help Desk&copy; 2024</p>
+        </form>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
