--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -63,7 +63,7 @@
 
             <div class="form-group">
                 <label for="inputEmail">Email</label>
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="username" required autofocus>
+                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="username"  value="demodeskservice@gmail.com" required autofocus>
                 <div class="invalid-feedback">Use seu email cadastrado como login.</div>
             </div>
 
