--- a/src/main/resources/templates/pedido-recuperar-senha.html
+++ b/src/main/resources/templates/pedido-recuperar-senha.html
@@ -56,6 +56,11 @@
                 <p class="text-muted">Informe o login para recuperação de senha!</p>
             </div>
             
+            <!-- Mensagem de sucesso -->
+            <div th:if="${sucesso}" class="alert alert-success">
+                <p th:text="${sucesso}"></p>
+            </div>
+            
             <div class="form-group">
                 <label for="inputEmail">Email</label>
                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address" name="email" required autofocus>
