modific color and timeout

--- a/src/main/resources/templates/index/index.html
+++ b/src/main/resources/templates/index/index.html
@@ -353,16 +353,16 @@
             label: 'Quantidade de Chamados',
             data: [ticketConcluido, ticketEmAndamento, ticketAberto, ticketAguardandoInfoAdd],
             backgroundColor: [
-                'rgba(75, 192, 192, 0.5)',
-                'rgba(54, 162, 235, 0.5)',
-                'rgba(255, 206, 86, 0.5)',
-                'rgba(255, 99, 132, 0.5)'
+                'rgba(50,205,50)',
+                'rgba(255,255,0)',
+                'rgba(0,191,255)',
+                'rgba(220,20,60)'
             ],
             borderColor: [
-                'rgba(75, 192, 192, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(255, 99, 132, 1)'
+                'rgba(50,205,50)',
+                'rgba(255,255,0)',
+                'rgba(0,191,255)',
+                'rgba(220,20,60)'
             ],
             borderWidth: 2
         }]
